--- a/index.html
+++ b/index.html
@@ -29,6 +29,9 @@
         <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
     <![endif]-->
 
+    <!-- jQuery -->
+    <script src="vendor/jquery/jquery.min.js"></script>
+    <script src="js/jquery.appear.js"></script>
 </head>
 
 <body id="page-top" class="index">
@@ -54,6 +57,12 @@
                         <a href="#intro">Self Introduction</a>
                     </li>
                     <li class="page-scroll">
+                        <a href="#experience">Experience</a>
+                    </li>
+                    <li class="page-scroll">
+                        <a href="#skill">Skill</a>
+                    </li>
+                    <li class="page-scroll">
                         <a href="#portfolio">Portfolio</a>
                     </li>
                     <li class="page-scroll">
@@ -76,9 +85,9 @@
                         <span class="name">Chi-Lun Chang</span>
                         <span class="name">(張祺崙)</span>
                         <hr>
-                        <p>Phone: +886-9-3038-6000</p>
-                        <p>Email: alanchang544@gmail.com</p>
-                        <p>Location: Taiwan, Hsinchu City</p>
+                        <p><i class="fa fa-phone fa-fw"></i> +886-9-3038-6000</p>
+                        <p><i class="fa fa-envelope-o fa-fw"></i> alanchang544@gmail.com</p>
+                        <p><i class="fa fa-map-marker fa-fw"></i> Taiwan, Hsinchu City</p>
                         <ul class="list-inline">
                             <li>
                                 <a href="https://www.facebook.com/profile.php?id=100000571870740" class="btn-social btn-outline"><i class="fa fa-fw fa-facebook"></i></a>
@@ -113,13 +122,13 @@
             </div>
             <div class="row">
                 <div class="col-lg-4 col-lg-offset-2">
-                    <span class="skills">An experienced Software Programmer. The related expertise is in following area:
+                    <span class="aboutme">An experienced Software Programmer. The related expertise is in following area:
                         <p></p>   
                         <p><i class="fa fa-hand-o-right"></i>&nbsp;&nbsp;Multimedia and Video Codec</p>
-                        <p><i class="fa fa-hand-o-right"></i>&nbsp;&nbsp;Embedded System - android</p>
-                        <p><i class="fa fa-hand-o-right"></i>&nbsp;&nbsp;Linux Device Driver</p>
-                        <p><i class="fa fa-hand-o-right"></i>&nbsp;&nbsp;OpenGLES and OpenCL</p> 
-                        <p><i class="fa fa-hand-o-right"></i>&nbsp;&nbsp;OpenCV and OpenVX</p>
+                        <p><i class="fa fa-hand-o-right"></i>&nbsp;&nbsp;Embedded System - ARM, 8032</p>
+                        <p><i class="fa fa-hand-o-right"></i>&nbsp;&nbsp;Android System, Linux Device Driver</p>
+                        <p><i class="fa fa-hand-o-right"></i>&nbsp;&nbsp;GPU and OpenGLES</p> 
+                        <p><i class="fa fa-hand-o-right"></i>&nbsp;&nbsp;OpenCL, OpenCV and OpenVX</p>
                         <p><i class="fa fa-hand-o-right"></i>&nbsp;&nbsp;C# GUI Development</p>
                         <p><i class="fa fa-hand-o-right"></i>&nbsp;&nbsp;Deep Learning - Caffe</p>
                     </span>
@@ -131,6 +140,139 @@
                 </div>
             </div>
         </div>
+    </section>
+
+    <!-- Experience Section -->
+    <section id="experience">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12 text-center">
+                    <h2 class="section-heading">Experience</h2>
+                    <h3 class="section-subheading text-muted">Ever stay in Acer, Stark Tech. and Mediatek until now.</h3>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-lg-12">
+                    <ul class="timeline">
+                        <li>
+                            <div class="timeline-image">
+                                <img class="img-circle img-responsive" src="img/about/1.jpg" alt="">
+                            </div>
+                            <div class="timeline-panel">
+                                <div class="timeline-heading">
+                                    <h4>2009-2011</h4>
+                                    <h4 class="subheading">Our Humble Beginnings</h4>
+                                </div>
+                                <div class="timeline-body">
+                                    <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p>
+                                </div>
+                            </div>
+                        </li>
+                        <li class="timeline-inverted">
+                            <div class="timeline-image">
+                                <img class="img-circle img-responsive" src="img/about/2.jpg" alt="">
+                            </div>
+                            <div class="timeline-panel">
+                                <div class="timeline-heading">
+                                    <h4>March 2011</h4>
+                                    <h4 class="subheading">An Agency is Born</h4>
+                                </div>
+                                <div class="timeline-body">
+                                    <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p>
+                                </div>
+                            </div>
+                        </li>
+                        <li>
+                            <div class="timeline-image">
+                                <img class="img-circle img-responsive" src="img/about/3.jpg" alt="">
+                            </div>
+                            <div class="timeline-panel">
+                                <div class="timeline-heading">
+                                    <h4>December 2012</h4>
+                                    <h4 class="subheading">Transition to Full Service</h4>
+                                </div>
+                                <div class="timeline-body">
+                                    <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p>
+                                </div>
+                            </div>
+                        </li>
+                        <li class="timeline-inverted">
+                            <div class="timeline-image">
+                                <img class="img-circle img-responsive" src="img/about/4.jpg" alt="">
+                            </div>
+                            <div class="timeline-panel">
+                                <div class="timeline-heading">
+                                    <h4>July 2014</h4>
+                                    <h4 class="subheading">Phase Two Expansion</h4>
+                                </div>
+                                <div class="timeline-body">
+                                    <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p>
+                                </div>
+                            </div>
+                        </li>
+                        <li class="timeline-inverted">
+                            <div class="timeline-image">
+                                <h4>Be Part
+                                    <br>Of Our
+                                    <br>Story!</h4>
+                            </div>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Skill Section -->
+    <section class="skills" id="skill">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12 text-center">
+                    <h2>Skills</h2>
+                    <hr class="line">
+                </div>
+            </div>
+	    <div class="row progress-row" align="center">
+                <div class="progress skill-bar ">
+                    <div class="progress-bar progress-bar-green" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100">
+                        <span class="skill">C, C++ <i class="val">Good</i></span>
+                    </div>
+                </div>
+                <div class="progress skill-bar">
+                    <div class="progress-bar progress-bar-lightblue" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" >
+                        <span class="skill">C#, Python<i class="val">Familar</i></span>
+                    </div>
+                </div>
+                <div class="progress skill-bar">
+                    <div class="progress-bar progress-bar-yellow" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100">
+                        <span class="skill">OpenGLES, OpenCL<i class="val">Middle</i></span>
+                    </div>
+                </div>  
+                <div class="progress skill-bar">
+                    <div class="progress-bar progress-bar-red" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100">
+                        <span class="skill">HTML, CSS<i class="val">Little</i></span>
+                    </div>
+                </div>
+                <div class="progress skill-bar">
+                    <div class="progress-bar progress-bar-blue" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100">
+                        <span class="skill">Java, Perl<i class="val">Rare</i></span>
+                    </div>
+                </div>
+	    </div>
+        </div>
+        <script type="text/javascript">
+         $(document).ready(function() {
+             $('.progress').each(function() {
+                 $(this).appear(function() {
+                   $('.progress .progress-bar').css("width",
+                        function() {
+                            return $(this).attr("aria-valuenow") + "%";
+                        }
+                    )
+                 });
+             });
+         });
+        </script>
     </section>
 
     <!-- Portfolio Grid Section -->
@@ -504,9 +646,6 @@
             </div>
         </div>
     </div>
-
-    <!-- jQuery -->
-    <script src="vendor/jquery/jquery.min.js"></script>
 
     <!-- Bootstrap Core JavaScript -->
     <script src="vendor/bootstrap/js/bootstrap.min.js"></script>
