Modify index.html for better look in PC version

--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
                             </div>
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
-                                    <h4>Febuary 2003</h4>
+                                    <h4>February 2003</h4>
                                     <h4 class="subheading">Join Mediatek DVD Division</h4>
                                 </div>
                                 <div class="timeline-body">
@@ -220,7 +220,7 @@
                                 </div>
                             </div>
                         </li>
-                        <li class="timeline-inverted">
+                        <li>
                             <div class="timeline-image">
                                 <img class="img-circle img-responsive" src="img/phone.png" alt="">
                             </div>
@@ -348,26 +348,6 @@
                             </div>
                         </div>
                         <img src="img/portfolio/cameratool.jpg" class="img-responsive" alt="">
-                    </a>
-                </div>
-                <div class="col-sm-4 portfolio-item hidden">
-                    <a href="#portfolioModal5" class="portfolio-link" data-toggle="modal">
-                        <div class="caption">
-                            <div class="caption-content">
-                                <i class="fa fa-search-plus fa-3x"></i>
-                            </div>
-                        </div>
-                        <img src="img/portfolio/safe.png" class="img-responsive" alt="">
-                    </a>
-                </div>
-                <div class="col-sm-4 portfolio-item hidden">
-                    <a href="#portfolioModal6" class="portfolio-link" data-toggle="modal">
-                        <div class="caption">
-                            <div class="caption-content">
-                                <i class="fa fa-search-plus fa-3x"></i>
-                            </div>
-                        </div>
-                        <img src="img/portfolio/submarine.png" class="img-responsive" alt="">
                     </a>
                 </div>
             </div>
@@ -545,7 +525,7 @@
                 <div class="row">
                     <div class="col-lg-8 col-lg-offset-2">
                         <div class="modal-body">
-                            <h3>Project about Camera, Tool</h3>
+                            <h3>C# Tool Development</h3>
                             <hr class="star-primary">
                             <img src="img/portfolio/cameratool.jpg" class="img-responsive img-centered" alt="">
                             <p>Use this area of the page to describe your project.</p>
@@ -649,6 +629,11 @@
     <!-- Theme JavaScript -->
     <script src="js/freelancer.min.js"></script>
 
+    <!-- [TODO1] animation background -->
+    <!-- [TODO2] subitems for all projects and it's repo -->
+    <!-- [TODO3] check image copyright -->
+    <!-- [TODO4] better look in PC version -->
+    <!-- [TODO5] check Performance and update resume -->
 </body>
 
 </html>
