add dnn study list

--- a/index.html
+++ b/index.html
@@ -85,7 +85,6 @@
                         <span class="name">Chi-Lun Chang</span>
                         <span class="name">(張祺崙)</span>
                         <hr>
-                        <p><i class="fa fa-phone fa-fw"></i> +886-9-3038-6000</p>
                         <p><i class="fa fa-envelope-o fa-fw"></i> alanchang544@gmail.com</p>
                         <p><i class="fa fa-map-marker fa-fw"></i> Taiwan, Hsinchu City</p>
                         <ul class="list-inline">
@@ -472,7 +471,8 @@
                             <h3>Deep Learning (AI)</h3>
                             <hr class="star-primary">
                             <img src="img/portfolio/intelligence.jpg" class="img-responsive img-centered" alt="">
-                            <p>Use this area of the page to describe your project.</p>
+                            <a href="papertable.html">DNN Paper Study List</a><br>
+                            <a href="https://github.com/QI1002/caffe">DNN Framework "Caffe" Study Repository</a>
                             <ul class="list-inline item-details">
                                 <li>Updated Date:
                                     <strong>February 2017</strong>
@@ -634,6 +634,9 @@
     <!-- [TODO3] check image copyright -->
     <!-- [TODO4] better look in PC version -->
     <!-- [TODO5] check Performance and update resume -->
+    <!-- [TODO6] test bootstrap table style -->
+    <!-- [TODO7] add more CSV fields and fix table UI align -->
+    <!-- [TODO8] sutdy ajax -->
 </body>
 
 </html>
