--- a/index.html
+++ b/index.html
@@ -443,7 +443,7 @@
                             <h3>English Learning</h3>
                             <hr class="star-primary">
                             <img src="img/portfolio/language.jpg" class="img-responsive img-centered" alt="">
-                            <p>iLearn is a feasible APK to let you learn language easilier</p>
+                            <p>iLearn is a feasible APP to let you learn language more easily</p>
                             <a href="data/iLearn.apk">Download iLearn APK</a><br>
                             <a href="https://github.com/qi1002/iLearn">iLearn Source Code Repository</a>
                             <ul class="list-inline item-details">
