Add the first version of resume

--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
                     </span>
                 </div>
                 <div class="col-lg-8 col-lg-offset-2 text-center">
-                    <a href="#" class="btn btn-lg btn-outline">
+                    <a href="data/Resume - Chi Lun Chang.docx" class="btn btn-lg btn-outline">
                         <i class="fa fa-download"></i>&nbsp;&nbsp;Get My Resume
                     </a>
                 </div>
