revise my website for some emphasis

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                     <li class="page-scroll">
                         <a href="#portfolio">Portfolio</a>
                     </li>
-                    <li class="page-scroll">
+                    <li class="hidden page-scroll">
                         <a href="#contact">Contact</a>
                     </li>
                 </ul>
@@ -115,25 +115,26 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h2>Self Introduction</h2>
+                    <h3>Self Introduction</h3>
                     <hr class="line">
                 </div>
             </div>
             <div class="row">
                 <div class="col-lg-4 col-lg-offset-2">
-                    <span class="aboutme">An experienced Software Programmer. The related expertise is in following area:
+                    <span class="aboutme">An experienced Software Programmer. The related expertise is listed as follows:
                         <p></p>   
                         <p><i class="fa fa-hand-o-right"></i>&nbsp;&nbsp;Multimedia and Video Codec</p>
                         <p><i class="fa fa-hand-o-right"></i>&nbsp;&nbsp;Embedded System - ARM, 8032</p>
-                        <p><i class="fa fa-hand-o-right"></i>&nbsp;&nbsp;Android System, Linux Device Driver</p>
+                        <p><i class="fa fa-hand-o-right"></i>&nbsp;&nbsp;Android Framework/Application</p>
+                        <p><i class="fa fa-hand-o-right"></i>&nbsp;&nbsp;Linux Device Driver</p>
                         <p><i class="fa fa-hand-o-right"></i>&nbsp;&nbsp;GPU and OpenGLES</p> 
-                        <p><i class="fa fa-hand-o-right"></i>&nbsp;&nbsp;OpenCL, OpenCV and OpenVX</p>
+                        <p><i class="fa fa-hand-o-right"></i>&nbsp;&nbsp;OpenCL, OpenCV, OpenVX, Halide</p>
                         <p><i class="fa fa-hand-o-right"></i>&nbsp;&nbsp;C# GUI Development</p>
                         <p><i class="fa fa-hand-o-right"></i>&nbsp;&nbsp;Deep Learning - Caffe</p>
                     </span>
                 </div>
                 <div class="col-lg-8 col-lg-offset-2 text-center">
-                    <a href="data/Resume - Chi Lun Chang.pdf" class="btn btn-lg btn-outline">
+                    <a href="data/Resume - Chi Lun Chang.pdf" class="btn btn-lg btn-resume">
                         <i class="fa fa-download"></i>&nbsp;&nbsp;Get My Resume
                     </a>
                 </div>
@@ -264,12 +265,17 @@
                 </div>
                 <div class="progress skill-bar">
                     <div class="progress-bar progress-bar-lightblue" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" >
-                        <span class="skill">C#, Python<i class="val">Familar</i></span>
+                        <span class="skill">OpenVX, OpenCV, HalideL<i class="val">Familar</i></span>
                     </div>
                 </div>
                 <div class="progress skill-bar">
-                    <div class="progress-bar progress-bar-yellow" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100">
-                        <span class="skill">OpenGLES, OpenCL<i class="val">Middle</i></span>
+                    <div class="progress-bar progress-bar-yellow" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" >
+                        <span class="skill">OpenGLES, OpenCL<i class="val">Familar</i></span>
+                    </div>
+                </div>
+                <div class="progress skill-bar">
+                    <div class="progress-bar progress-bar-blue" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100">
+                        <span class="skill">C#, Python<i class="val">Middle</i></span>
                     </div>
                 </div>  
                 <div class="progress skill-bar">
@@ -278,7 +284,7 @@
                     </div>
                 </div>
                 <div class="progress skill-bar">
-                    <div class="progress-bar progress-bar-blue" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100">
+                    <div class="progress-bar progress-bar-gray" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100">
                         <span class="skill">Java, Perl<i class="val">Rare</i></span>
                     </div>
                 </div>
@@ -354,7 +360,7 @@
     </section>
 
     <!-- Contact Section -->
-    <section id="contact">
+    <section class="hidden" id="contact">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
@@ -534,80 +540,6 @@
                             <ul class="list-inline item-details">
                                 <li>Updated Date:
                                     <strong>February 2017</strong>
-                                </li>
-                            </ul>
-                            <button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i> Close</button>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-    <div class="portfolio-modal modal fade" id="portfolioModal5" tabindex="-1" role="dialog" aria-hidden="true">
-        <div class="modal-content">
-            <div class="close-modal" data-dismiss="modal">
-                <div class="lr">
-                    <div class="rl">
-                    </div>
-                </div>
-            </div>
-            <div class="container">
-                <div class="row">
-                    <div class="col-lg-8 col-lg-offset-2">
-                        <div class="modal-body">
-                            <h2>Project Title</h2>
-                            <hr class="star-primary">
-                            <img src="img/portfolio/safe.png" class="img-responsive img-centered" alt="">
-                            <p>Use this area of the page to describe your project. The icon above is part of a free icon set by <a href="https://sellfy.com/p/8Q9P/jV3VZ/">Flat Icons</a>. On their website, you can download their free set with 16 icons, or you can purchase the entire set with 146 icons for only $12!</p>
-                            <ul class="list-inline item-details">
-                                <li>Client:
-                                    <strong><a href="http://startbootstrap.com">Start Bootstrap</a>
-                                    </strong>
-                                </li>
-                                <li>Date:
-                                    <strong><a href="http://startbootstrap.com">April 2014</a>
-                                    </strong>
-                                </li>
-                                <li>Service:
-                                    <strong><a href="http://startbootstrap.com">Web Development</a>
-                                    </strong>
-                                </li>
-                            </ul>
-                            <button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i> Close</button>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-    <div class="portfolio-modal modal fade" id="portfolioModal6" tabindex="-1" role="dialog" aria-hidden="true">
-        <div class="modal-content">
-            <div class="close-modal" data-dismiss="modal">
-                <div class="lr">
-                    <div class="rl">
-                    </div>
-                </div>
-            </div>
-            <div class="container">
-                <div class="row">
-                    <div class="col-lg-8 col-lg-offset-2">
-                        <div class="modal-body">
-                            <h2>Project Title</h2>
-                            <hr class="star-primary">
-                            <img src="img/portfolio/submarine.png" class="img-responsive img-centered" alt="">
-                            <p>Use this area of the page to describe your project. The icon above is part of a free icon set by <a href="https://sellfy.com/p/8Q9P/jV3VZ/">Flat Icons</a>. On their website, you can download their free set with 16 icons, or you can purchase the entire set with 146 icons for only $12!</p>
-                            <ul class="list-inline item-details">
-                                <li>Client:
-                                    <strong><a href="http://startbootstrap.com">Start Bootstrap</a>
-                                    </strong>
-                                </li>
-                                <li>Date:
-                                    <strong><a href="http://startbootstrap.com">April 2014</a>
-                                    </strong>
-                                </li>
-                                <li>Service:
-                                    <strong><a href="http://startbootstrap.com">Web Development</a>
-                                    </strong>
                                 </li>
                             </ul>
                             <button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i> Close</button>
