update resume about skills

--- a/index.html
+++ b/index.html
@@ -123,14 +123,14 @@
                 <div class="col-lg-4 col-lg-offset-2">
                     <span class="aboutme">An experienced Software Programmer. The related expertise is listed as follows:
                         <p></p>   
-                        <p><i class="fa fa-hand-o-right"></i>&nbsp;&nbsp;Multimedia and Video Codec</p>
+                        <p><i class="fa fa-hand-o-right"></i>&nbsp;&nbsp;C/C++, Java, Python, C# and Perl</p>
                         <p><i class="fa fa-hand-o-right"></i>&nbsp;&nbsp;Embedded System - ARM, 8032</p>
                         <p><i class="fa fa-hand-o-right"></i>&nbsp;&nbsp;Android Framework/Application</p>
                         <p><i class="fa fa-hand-o-right"></i>&nbsp;&nbsp;Linux Device Driver</p>
                         <p><i class="fa fa-hand-o-right"></i>&nbsp;&nbsp;GPU and OpenGLES</p> 
                         <p><i class="fa fa-hand-o-right"></i>&nbsp;&nbsp;OpenCL, OpenCV, OpenVX, Halide</p>
-                        <p><i class="fa fa-hand-o-right"></i>&nbsp;&nbsp;C# GUI Development</p>
                         <p><i class="fa fa-hand-o-right"></i>&nbsp;&nbsp;Deep Learning - Caffe</p>
+                        <p><i class="fa fa-hand-o-right"></i>&nbsp;&nbsp;Multimedia and Video Codec</p>
                     </span>
                 </div>
                 <div class="col-lg-8 col-lg-offset-2 text-center">
@@ -260,32 +260,27 @@
 	    <div class="row progress-row" align="center">
                 <div class="progress skill-bar ">
                     <div class="progress-bar progress-bar-green" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100">
-                        <span class="skill">C, C++ <i class="val">Good</i></span>
-                    </div>
-                </div>
-                <div class="progress skill-bar">
-                    <div class="progress-bar progress-bar-lightblue" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" >
-                        <span class="skill">OpenVX, OpenCV, HalideL<i class="val">Familar</i></span>
+                        <span class="skill">C/C++, Java, Python, C#<i class="val">Good</i></span>
                     </div>
                 </div>
                 <div class="progress skill-bar">
                     <div class="progress-bar progress-bar-yellow" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" >
-                        <span class="skill">OpenGLES, OpenCL<i class="val">Familar</i></span>
+                        <span class="skill">Embedded System(ARM), Android, Linux Kernel<i class="val">Familar</i></span>
                     </div>
                 </div>
                 <div class="progress skill-bar">
                     <div class="progress-bar progress-bar-blue" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100">
-                        <span class="skill">C#, Python<i class="val">Middle</i></span>
+                        <span class="skill">OpenGLES, OpenCL, OpenVX, OpenCV, Halide<i class="val">Middle</i></span>
                     </div>
                 </div>  
                 <div class="progress skill-bar">
                     <div class="progress-bar progress-bar-red" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100">
-                        <span class="skill">HTML, CSS, JS<i class="val">Little</i></span>
+                        <span class="skill">Deep Learning - Caffe<i class="val">Little</i></span>
                     </div>
                 </div>
                 <div class="progress skill-bar">
                     <div class="progress-bar progress-bar-gray" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100">
-                        <span class="skill">Java, Perl<i class="val">Rare</i></span>
+                        <span class="skill">HTML, CSS, JS<i class="val">Rare</i></span>
                     </div>
                 </div>
 	    </div>
